applications/filezilla/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: filezilla
  name: filezilla
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: filezilla
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: filezilla
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/London
          image: ghcr.io/linuxserver/filezilla
          name: filezilla
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: server
              subPath: filezilla
      restartPolicy: Always
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
status: {}
