applications/filezilla/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: filezilla
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("filezilla.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: filezilla
          port: 3000
